[tool.poetry]
name = "eventmaster"
version = "1.0"
description = "Personal DevotedExu's bot for handling events."
authors = ["Exenifix"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
disnake = "^2.8.1"
pillow = "^9.4.0"
asyncpg = "^0.27.0"
exencolorlogs = "^1.1.1"
pendulum = "^2.1.2"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
isort = "^5.12.0"
ruff = "^0.0.254"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
target-version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
